[web] Prevent changing the only admin role in a community
Summary:
We need to prevent the only admin from removing themselves as `Admins` in a community. Based on the designs, we should display an error in the modal indicating why the saved role changes failed.

https://linear.app/comm/issue/ENG-4041/prevent-changing-the-only-admin-role-in-a-community

Depends on D8140

Test Plan: Please see the video below covering the cases of changing the only admin role

Reviewers: atul, ginsu

Subscribers: ashoat, tomek

Differential Revision: https://phab.comm.dev/D8141

--- a/web/modals/threads/members/change-member-role-modal.css
+++ b/web/modals/threads/members/change-member-role-modal.css
@@ -48,3 +48,27 @@
 .roleModalBackButton {
   padding: 14px 32px;
 }
+
+.roleModalDisabled {
+  color: var(--change-member-role-modal-description-text);
+  background-color: var(--change-member-role-modal-disabled-background);
+  padding: 8px;
+  width: 73%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.infoIcon {
+  margin-right: 4px;
+  margin-bottom: 12px;
+}
+
+.infoText {
+  font-size: var(--s-font-14);
+  padding: 4px;
+}
